# hermes-concurrent-agents

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INTEGRATION_PLAN.md  MANIFEST.in  NOTICE  README.md  SECURITY.md  SKILL.md  pyproject.toml  setup.sh
.github/: actionlint.yaml
.github/workflows/: ci.yml  hardware-benchmark.yml
config/: profile-template.yaml
config/mm27/: profile-template.yaml
config/presets/: gb10-cluster-sglang.toml  gb10-sglang.toml  gb10-vllm.toml  generic-linux.toml
config/sglang/: docker-compose.yml  launch.sh
config/vllm/: docker-compose.yml
demos/mm27-local-agent-team/: README.md  SPEC.md  acceptance-check.sh  create-kanban-tasks.sh  create-optimized-demo-tasks.sh
demos/mm27-local-agent-team/video/: README.md  SHOT_LIST.md  X_THREAD.md  caption.template.srt  post-production.sh
docs/: architecture.md  audit-2026-07-12.md  backends-vllm-sglang.md  benchmarking.md  current-state-report.md  deployment-guide.md  durability-tests.md  gb10-cluster.md  isolation-and-kv-cache.md  migration.md  mm27-gb10-demo.md  nvidia-playbooks.md  observability.md  operations.md  running-a-team.md  security.md  subagent-policy.md  support-matrix.md  tuning-guide.md  upstream-compatibility.md  use-cases.md  workflow-patterns.md
docs/grade/: current-score.md  evidence-map.md  rubric.md
docs/plans/: 2026-05-12-community-release.md  2026-07-12-hermes-agent-modernization.md  fix-model-name-404.md
profiles/creative-worker/: SOUL.md
profiles/orchestrator/: SOUL.md
profiles/research-worker/: SOUL.md
references/: research-report-summary.md
scripts/: benchmark.sh  check-backend.sh  fault-injection-test.sh  generate-support-matrix.py  health-monitor.sh  public-safety-check.py  release-check.sh  run-orchestration-acceptance.py  setup-mm27-demo.sh  shutdown.sh  smoke-kanban-flow.sh  spawn-mm27-demo.sh  spawn.sh  status.sh  validate-docs.sh  verify-local-only.sh  verify-model-choice.sh
src/hca/: __init__.py  bench.py  cli.py  config.py  controller.py  decompose.py  doctor.py  evidence.py  hermes_compat.py  kanban.py  kanban_orchestrator.py  leases.py  logs.py  migrations.py  models.py  observe.py  plugin.py  plugin_schemas.py  plugin_tools.py  process_identity.py  profiles.py  release_safety.py  resources.py  result.py  routing.py  run.py  service.py  ssh_exec.py  state.py  supervisor.py  support.py  team.py  tmux.py  transcript.py  worker_launch.py  workspaces.py
src/hca/backends/: __init__.py  openai_compat.py  sglang.py  vllm.py
src/hca/devices/: __init__.py  base.py  gb10.py  generic.py  macos.py  nvidia.py
tests/contract/: test_compat_probes.py  test_hermes_runtime.py  test_release_workflows.py  test_worker_launch_contract.py
tests/integration/: conftest.py  test_cli_plugin_parity.py  test_cluster_scope_guard.py  test_concrete_slot_routing.py  test_generic_fake_endpoint.py  test_plugin_enablement.py  test_profile_provisioning.py  test_state_migrations.py  test_subagent_leases.py  test_vertical_slice_c1.py
tests/unit/: test_capacity_diagnostics.py  test_cli.py  test_complete_surface.py  test_config.py  test_config_roundtrip.py  test_controller.py  test_decompose.py  test_devices.py  test_dispatch_slots.py  test_evidence.py  test_git_evidence.py  test_openai_compat.py  test_package_metadata.py  test_parallel_planner.py  test_process_identity.py  test_profiles.py  test_release_safety.py  test_resources.py  test_routing.py  test_run_state.py  test_service_lifecycle.py  test_state.py  test_team_selection.py  test_tmux.py  test_workspace_attestation.py
(+12 files in other folders)
