[build-system]
requires = ["setuptools>=77,<83", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-concurrent-agents"
version = "2.0.0"
description = "Supervised concurrent teams built on Hermes Agent Kanban and profiles"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "r0b0tlab" }]
keywords = ["hermes", "agents", "orchestration", "gb10", "tmux", "kanban"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["pyyaml>=6.0,<7"]

[project.optional-dependencies]
dev = [
  "actionlint-py>=1.7.12.24,<1.8",
  "build>=1.2",
  "pyright>=1.1.400",
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
hca = "hca.cli:main"

[project.entry-points."hermes_agent.plugins"]
hca = "hca.plugin"

[project.urls]
Homepage = "https://github.com/r0b0tlab/hermes-concurrent-agents"
Documentation = "https://github.com/r0b0tlab/hermes-concurrent-agents/tree/main/docs"
Changelog = "https://github.com/r0b0tlab/hermes-concurrent-agents/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hca = [
    "presets/*.toml",
    "templates/profiles/*/SOUL.md",
    "templates/teams/*.toml",
    "skills/*/SKILL.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
include = [
  "src/hca/config.py",
  "src/hca/hermes_compat.py",
  "src/hca/plugin.py",
  "src/hca/run.py",
  "src/hca/service.py",
]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
